--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -6,8 +6,7 @@ ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /app
-COPY . /app
-RUN npm install
+COPY ./.release/ /app
 
 CMD npm start
 EXPOSE 8080
