--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "start": "node lib --kit3/apps/api",
     "build": "cp -R ./src ./lib && echo ok",
-    "dev": "node src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo ok",
+    "dev": "node src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "files": [
+    "lib",
+    "Dockerfile",
+    "docker-stack.yml"
+  ]
 }
