--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -85,6 +85,7 @@ deploy:dev:
     VIRTUAL_HOST: (Host(`dev-kit.chatterfy.ai`))
   environment:
     name: dev
+  when: manual
   only:
     - develop
 
@@ -103,6 +104,7 @@ deploy:prod:
     VIRTUAL_HOST: (Host(`kit.chatterfy.ai`))
   environment:
     name: prod
+  when: manual
   only:
     - master
 
@@ -128,14 +130,12 @@ deploy:prod:manual:
 
 deploy:k8s_prod:manual:
   stage: deploy
-  image:
-    name: bitnami/kubectl:latest
-    entrypoint: ['']
   extends: .docker-utils-before-script
   tags:
     - deploy
     - prod
   script:
+    - apk add --update kubectl
     - kubectl cluster-info
     - kubectl create secret generic prod-kit --from-file=${prod_env_file} --from-file=${prod_env_js} --save-config --dry-run=client -o yaml | kubectl apply -f -
     - envsubst < deploy/k8s-deploy.yaml > deploy.yaml.${CI_COMMIT_SHORT_SHA}
