--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -131,11 +131,11 @@ deploy:prod:manual:
 deploy:k8s_prod:manual:
   stage: deploy
   extends: .docker-utils-before-script
+  image: bitnami/kubectl:latest
   tags:
     - deploy
     - prod
   script:
-    - apk add --update kubectl
     - kubectl cluster-info
     - kubectl create secret generic prod-kit --from-file=${prod_env_file} --from-file=${prod_env_js} --save-config --dry-run=client -o yaml | kubectl apply -f -
     - envsubst < deploy/k8s-deploy.yaml > deploy.yaml.${CI_COMMIT_SHORT_SHA}
