--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -133,8 +133,7 @@ deploy:k8s_prod:manual:
   extends: .docker-utils-before-script
   image: bitnami/kubectl:latest
   tags:
-    - deploy
-    - prod
+    - docker
   script:
     - kubectl cluster-info
     - kubectl create secret generic prod-kit --from-file=${prod_env_file} --from-file=${prod_env_js} --save-config --dry-run=client -o yaml | kubectl apply -f -
