--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -132,7 +132,7 @@ deploy:k8s_prod:manual:
   stage: deploy
   extends: .docker-utils-before-script
   image:
-    name: ga2mer/kubectl:1.27.3
+    name: ga2mer/kubectl:1.27-debian11
     entrypoint: [""]
   tags:
     - docker
