--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -62,6 +62,40 @@ docker_api:
     DOCKER_IMAGE: ${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA}
     DOCKER_IMAGE_TAG: ${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_REF_NAME}
 
+docker_api_do:
+  stage: docker
+  tags: [docker]
+  image: lskjs/dind
+  extends: .docker-utils-before-script
+  script:
+    # - log docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASS} ${DOCKER_REGISTRY}
+    - echo ${DO_DOCKER_REGISTRY_PASS} | log docker login -u ${DO_DOCKER_REGISTRY_USER} --password-stdin ${DO_DOCKER_REGISTRY}
+    - log docker build -t ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA} ${DOCKER_FILE}
+    - docker tag ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA} ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_REF_NAME}
+    - docker push ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA}
+    - docker push ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_REF_NAME}
+  variables:
+    CWD: apps/api
+    DOCKER_IMAGE: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA}
+    DOCKER_IMAGE_TAG: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_REF_NAME}
+
+docker_web_do:
+  stage: docker
+  tags: [docker]
+  image: lskjs/dind
+  extends: .docker-utils-before-script
+  script:
+    # - log docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASS} ${DOCKER_REGISTRY}
+    - echo ${DO_DOCKER_REGISTRY_PASS} | log docker login -u ${DO_DOCKER_REGISTRY_USER} --password-stdin ${DO_DOCKER_REGISTRY}
+    - log docker build -t ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_SHORT_SHA} ${DOCKER_FILE}
+    - docker tag ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_SHORT_SHA} ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_REF_NAME}
+    - docker push ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_SHORT_SHA}
+    - docker push ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_REF_NAME}
+  variables:
+    CWD: apps/web
+    DOCKER_IMAGE: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_SHORT_SHA}
+    DOCKER_IMAGE_TAG: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_REF_NAME}
+
 docker_web:
   extends:
     - .docker
@@ -144,9 +178,9 @@ deploy:k8s_prod:manual:
   variables:
     STAGE: prod
     APP_NAME: kit3
-    DOCKER_IMAGE_APP: ${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/app:${CI_COMMIT_SHORT_SHA}
-    DOCKER_IMAGE_API: ${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA}
-    DOCKER_IMAGE_WEB: ${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_SHORT_SHA}
+    DOCKER_IMAGE_APP: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/app:${CI_COMMIT_SHORT_SHA}
+    DOCKER_IMAGE_API: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/api:${CI_COMMIT_SHORT_SHA}
+    DOCKER_IMAGE_WEB: ${DO_DOCKER_REGISTRY}/${CI_PROJECT_PATH}/web:${CI_COMMIT_SHORT_SHA}
     DOCKER_SERVICE: prod_kit
     VIRTUAL_HOST: (Host(`kit.chatterfy.ai`))
   environment:
