--- a/deploy/k8s-deploy.yaml
+++ b/deploy/k8s-deploy.yaml
@@ -23,6 +23,8 @@ spec:
       containers:
         - name: api
           image: ${DOCKER_IMAGE_API}
+          imagePullSecrets:
+            - name: kit
           volumeMounts:
             - name: env
               readOnly: true
@@ -54,6 +56,8 @@ spec:
               value: "${CI_JOB_ID}"
         - name: web
           image: ${DOCKER_IMAGE_WEB}
+          imagePullSecrets:
+            - name: kit
           volumeMounts:
             - name: env
               readOnly: true
