--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -6,6 +6,23 @@ stages:
   - docker 
   - deploy
 
+
+build:k8s:
+  stage: deploy
+  # extends: .docker-utils-before-script
+  image:
+    name: lskjs/kubectl:1.27.2
+    entrypoint: [""]
+  tags:
+    - docker
+  script:
+    - echo 123
+    # - kubectl cluster-info
+    # - kubectl create secret generic prod-kit --from-file=${prod_env_file} --from-file=${prod_env_js} --save-config --dry-run=client -o yaml | kubectl apply -f -
+    # - envsubst < deploy/k8s-deploy.yaml > deploy.yaml.${CI_COMMIT_SHORT_SHA}
+    # - kubectl apply -f ./deploy.yaml.${CI_COMMIT_SHORT_SHA}
+
+
 build_api:
   extends:
     - .utils-before-script
