--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8.1.0
-      - uses: ./.github/actions/utils-before.yml
+      - uses: ./.github/actions/utils-before
       - run: pnpm install
       - run: pnpm build
       - run: pnpm -F "." deploy .release
