--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@master
         with:
-          name: 
+          name: api
       - name: unzip artifact for deployment
         run: unzip release.zip && rm release.zip
       - uses: ./.github/actions/docker
