--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - run: pnpm build
       - run: pnpm -F "." deploy .release
       - name: Zip artifact for deployment
-        run: zip release.zip ./apps/api/.release ./apps/api/lib -r
+        run: zip release.zip ./.release ./lib -r
       - uses: actions/upload-artifact@master
         with:
           name: api
