--- a/.github/actions/docker-utils-before-script/action.yml
+++ b/.github/actions/docker-utils-before-script/action.yml
@@ -10,7 +10,7 @@ runs:
         if [ -x "$(command -v pnpm)" ]; then pnpm config set store-dir .pnpm-store; fi
         if [ "$CWD" ]; then echo "Change directory: $CWD" && cd $CWD; fi
         if [ -z "$CI_COMMIT_REF_NAME" ]; then echo "CI_COMMIT_REF_NAME=${GITHUB_REF#refs/heads/}" >> "$GITHUB_ENV"; fi
-        if [ -z "$CI_COMMIT_SHORT_SHA" ]; then echo "CI_COMMIT_SHORT_SHA="${GITHUB_SHA::7}" >> "$GITHUB_ENV"; fi
+        if [ -z "$CI_COMMIT_SHORT_SHA" ]; then echo "CI_COMMIT_SHORT_SHA=${GITHUB_SHA::7}" >> "$GITHUB_ENV"; fi
         if [ -z "$STAGE" ]; then export STAGE="${CI_ENVIRONMENT_NAME}"; fi
         if [ -z "$VERSION" ]; then export VERSION="${CI_COMMIT_SHORT_SHA}"; fi
         if [ -z "$PACKAGE_PATH" ]; then export PACKAGE_PATH="."; fi
