ci: forgot quote at end

--- a/.github/actions/docker-utils-before-script/action.yml
+++ b/.github/actions/docker-utils-before-script/action.yml
@@ -35,31 +35,31 @@ runs:
     - run: if [ -z "$dev_env_file" ]; then echo 'dev_env_file="/REPLACE_ME_PLEASE_OR_CHECK_PROTECTED_BRANCH_IN_CI/dev_env_file"' >> "$GITHUB_ENV"; fi
     - run: if [ -z "$prod_env_file" ]; then echo 'prod_env_file="/REPLACE_ME_PLEASE_OR_CHECK_PROTECTED_BRANCH_IN_CI/prod_env_file"' >> "$GITHUB_ENV"; fi
     - run: |
-        echo "CI_ENVIRONMENT_NAME = ${{ env.CI_ENVIRONMENT_NAME }}
-        echo "CI_ENVIRONMENT_SLUG = ${{ env.CI_ENVIRONMENT_SLUG }}
-        echo "CI_COMMIT_REF_NAME = ${{ env.CI_COMMIT_REF_NAME }}
-        echo "STAGE = ${{ env.STAGE }}
-        echo "VERSION = ${{ env.VERSION }}
-        echo "PACKAGE_PATH = ${{ env.PACKAGE_PATH }}
-        echo "DOCKER_REGISTRY_USER = ${{ env.DOCKER_REGISTRY_USER }}
-        echo "DOCKER_REGISTRY_PASS = ${{ env.DOCKER_REGISTRY_PASS }}
-        echo "DOCKER_REGISTRY = ${{ env.DOCKER_REGISTRY }}
-        echo "DOCKER_REGISTRY_PATH = ${{ env.DOCKER_REGISTRY_PATH }}
-        echo "DOCKER_REGISTRY_URI = ${{ env.DOCKER_REGISTRY_URI }}
-        echo "DOCKER_IMAGE = ${{ env.DOCKER_IMAGE }}
-        echo "DOCKER_TAG = ${{ env.DOCKER_TAG }}
-        echo "DOCKER_IMAGE_VERSION = ${{ env.DOCKER_IMAGE_VERSION }}
-        echo "DOCKER_IMAGE_TAG = ${{ env.DOCKER_IMAGE_TAG }}
-        echo "DOCKER_SERVICE = ${{ env.DOCKER_SERVICE }}
-        echo "DOCKER_FILE = ${{ env.DOCKER_FILE }}
-        echo "DOCKER_STACK = ${{ env.DOCKER_STACK }}
-        echo "DOCKER_IMAGE_CHECK = ${{ env.DOCKER_IMAGE_CHECK }}
-        echo "DOCKER_STACK_DEBUG = ${{ env.DOCKER_STACK_DEBUG }}
-        echo "env_js = ${{ env.env_js }}
-        echo "dev_env_js = ${{ env.dev_env_js }}
-        echo "prod_env_js = ${{ env.prod_env_js }}
-        echo "env_file = ${{ env.env_file }}
-        echo "dev_env_file = ${{ env.dev_env_file }}
-        echo "prod_env_file = ${{ env.prod_env_file }}
+        echo "CI_ENVIRONMENT_NAME = ${{ env.CI_ENVIRONMENT_NAME }}"
+        echo "CI_ENVIRONMENT_SLUG = ${{ env.CI_ENVIRONMENT_SLUG }}"
+        echo "CI_COMMIT_REF_NAME = ${{ env.CI_COMMIT_REF_NAME }}"
+        echo "STAGE = ${{ env.STAGE }}"
+        echo "VERSION = ${{ env.VERSION }}"
+        echo "PACKAGE_PATH = ${{ env.PACKAGE_PATH }}"
+        echo "DOCKER_REGISTRY_USER = ${{ env.DOCKER_REGISTRY_USER }}"
+        echo "DOCKER_REGISTRY_PASS = ${{ env.DOCKER_REGISTRY_PASS }}"
+        echo "DOCKER_REGISTRY = ${{ env.DOCKER_REGISTRY }}"
+        echo "DOCKER_REGISTRY_PATH = ${{ env.DOCKER_REGISTRY_PATH }}"
+        echo "DOCKER_REGISTRY_URI = ${{ env.DOCKER_REGISTRY_URI }}"
+        echo "DOCKER_IMAGE = ${{ env.DOCKER_IMAGE }}"
+        echo "DOCKER_TAG = ${{ env.DOCKER_TAG }}"
+        echo "DOCKER_IMAGE_VERSION = ${{ env.DOCKER_IMAGE_VERSION }}"
+        echo "DOCKER_IMAGE_TAG = ${{ env.DOCKER_IMAGE_TAG }}"
+        echo "DOCKER_SERVICE = ${{ env.DOCKER_SERVICE }}"
+        echo "DOCKER_FILE = ${{ env.DOCKER_FILE }}"
+        echo "DOCKER_STACK = ${{ env.DOCKER_STACK }}"
+        echo "DOCKER_IMAGE_CHECK = ${{ env.DOCKER_IMAGE_CHECK }}"
+        echo "DOCKER_STACK_DEBUG = ${{ env.DOCKER_STACK_DEBUG }}"
+        echo "env_js = ${{ env.env_js }}"
+        echo "dev_env_js = ${{ env.dev_env_js }}"
+        echo "prod_env_js = ${{ env.prod_env_js }}"
+        echo "env_file = ${{ env.env_file }}"
+        echo "dev_env_file = ${{ env.dev_env_file }}"
+        echo "prod_env_file = ${{ env.prod_env_file }}"
         echo ""
       shell: bash
