--- a/.github/actions/docker/action.yml
+++ b/.github/actions/docker/action.yml
@@ -6,9 +6,9 @@ runs:
   steps:
     - uses: ./.github/actions/docker-utils-before-script
     # - run: echo ${DOCKER_REGISTRY_PASS} | log docker login -u ${DOCKER_REGISTRY_USER} --password-stdin ${DOCKER_REGISTRY}
-    - run: docker build -t ${DOCKER_IMAGE} ${DOCKER_FILE}
+    - run: docker build -t ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_FILE }}
       shell: bash
-    - run: docker tag ${DOCKER_IMAGE} ${DOCKER_IMAGE_TAG}
+    - run: docker tag ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_IMAGE_TAG }}
       shell: bash
     #- run: docker push ${DOCKER_IMAGE}
     #- run: docker push ${DOCKER_IMAGE_TAG}
