--- a/.github/actions/docker/action.yml
+++ b/.github/actions/docker/action.yml
@@ -10,10 +10,13 @@ runs:
   using: "composite"
   steps:
     - uses: ./.github/actions/docker-utils-before-script
-    # - run: echo ${DOCKER_REGISTRY_PASS} | log docker login -u ${DOCKER_REGISTRY_USER} --password-stdin ${DOCKER_REGISTRY}
+    - run: echo ${{ secrets.DOCKER_REGISTRY_PASS }} | log docker login -u ${{ secrets.DOCKER_REGISTRY_USER }} --password-stdin ${{ vars.DOCKER_REGISTRY }}
+      shell: bash
     - run: cd ${{ inputs.working-directory }} && docker build -t ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_FILE }}
       shell: bash
     - run: docker tag ${{ env.DOCKER_IMAGE }} ${{ env.DOCKER_IMAGE_TAG }}
       shell: bash
-    #- run: docker push ${DOCKER_IMAGE}
-    #- run: docker push ${DOCKER_IMAGE_TAG}
+    # - run: docker push ${{ env.DOCKER_IMAGE }}
+    #   shell: bash
+    # - run: docker push ${{ env.DOCKER_IMAGE_TAG }}
+    #   shell: bash
